--- a/pom.xml
+++ b/pom.xml
@@ -9,9 +9,9 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.application</groupId>
-	<artifactId>collab</artifactId>
+	<artifactId>collab-api</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>collab</name>
+	<name>collab-api</name>
 	<description>Collab project for Spring Boot</description>
 	<properties>
 		<java.version>17</java.version>
