--- a/api-gateway/src/main/resources/application.yml
+++ b/api-gateway/src/main/resources/application.yml
@@ -8,42 +8,11 @@ spring:
   application:
     name: api-gateway
   config:
-    import: "optional:configserver:http://localhost:8088"
-#  cloud:
-#    gateway:
-#      globalCors:
-#        corsConfigurations:
-#          '[/**]':
-#            allowedOrigins: "*"
-#            allowedMethods: "*"
-#            allowedHeaders: "*"
-#      routes:
-#        - id: user-service
-#          uri: http://localhost:9002/
-#          predicates:
-#            - Path=/api/**
-#          filters:
-#            - SetPath=/user-service/
+    import: "optional:configserver:https://localhost:8088"
 server:
   port: 8080
 
-#spring:
-#  application:
-#    name: api-gateway
-
-#zuul:
-#  prefix: /api
-#  routes:
-#    user:
-#      path: /user/**
-#      serviceId: user-service
-
-#ribbon:
-#  eureka:
-#    enabled: true
-
-#eureka:
-#  client:
-#    serviceUrl:
-#      defaultZone: http://localhost:8761/eureka/
-#    registerWithEureka: true
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:8761/eureka/
