Fixed some files

--- a/config-server/Dockerfile
+++ b/config-server/Dockerfile
@@ -1,6 +1,6 @@
 FROM openjdk:17
 
-ENV APP_NAME user-service
+ENV APP_NAME config-server
 
 MAINTAINER ${APP_NAME}
 
@@ -8,6 +8,6 @@ COPY ./target/${APP_NAME}.jar  /app/${APP_NAME}.jar
 
 WORKDIR /app
 
-EXPOSE 9002
+EXPOSE 8088
 
 ENTRYPOINT java -jar ${APP_NAME}.jar
