--- a/user-service/pom.xml
+++ b/user-service/pom.xml
@@ -125,6 +125,7 @@
 		</repository>
 	</repositories>
 	<build>
+		<finalName>user-service</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
