--- a/eureka-server/src/main/resources/application.yml
+++ b/eureka-server/src/main/resources/application.yml
@@ -4,8 +4,8 @@ spring:
     activate:
       on-profile: docker
 ---
-spring:
-  application:
-    name: eureka-server
-  config:
-    import: "optional:configserver:http://localhost:8088"
+#spring:
+#  application:
+#    name: eureka-server
+#  config:
+#    import: "optional:configserver:http://localhost:8088"
