--- a/user-service/src/main/resources/application.yml
+++ b/user-service/src/main/resources/application.yml
@@ -3,6 +3,12 @@ spring:
     import: "optional:configserver:http://config-service:8088"
     activate:
       on-profile: docker
+
+eureka:
+  client:
+    service-url:
+      defaultZone: http://eureka-server:8761/eureka/
+
 ---
 spring:
   application:
@@ -36,10 +42,8 @@ security:
     enabled: false
 
 security.enable-csrf: false
+
 #eureka:
 #  client:
 #    service-url:
-#      defaultZone: http://localhost:8761/eureka
-#    fetch-registry: true
-#    register-with-eureka: true
-#    enabled: true
+#      defaultZone: http://localhost:8761/eureka/
