Update yml files

--- a/user-service/src/main/resources/application.yml
+++ b/user-service/src/main/resources/application.yml
@@ -43,6 +43,10 @@ security:
 
 security.enable-csrf: false
 
+eureka:
+  client:
+    service-url:
+      defaultZone: http://eureka-server:8761/eureka/
 #eureka:
 #  client:
 #    service-url:
