--- a/api-gateway/src/main/resources/application.yml
+++ b/api-gateway/src/main/resources/application.yml
@@ -17,8 +17,12 @@ spring:
   config:
     import: "optional:configserver:https://localhost:8088"
 server:
-  port: 8080
+  port: 8081
 
+eureka:
+  client:
+    service-url:
+      defaultZone: http://eureka-server:8761/eureka/
 #eureka:
 #  client:
 #    service-url:
