--- a/email-service/src/main/resources/application.properties
+++ b/email-service/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-server.port=8080
+server.port=9003
 
-spring.datasource.url= jdbc:postgresql://localhost:5432/email-service
+spring.datasource.url= jdbc:postgresql://localhost:5432/email_service
 spring.datasource.username=postgres
 spring.datasource.password=admin@123
 spring.jpa.hibernate.ddl-auto=update
