--- a/email-service/src/main/resources/application.properties
+++ b/email-service/src/main/resources/application.properties
@@ -4,3 +4,5 @@ spring.mail.username=**********@gmail.com
 spring.mail.password=********************
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+spring.main.web-application-type=reactive
+
