--- a/email-service/src/main/resources/application.yml
+++ b/email-service/src/main/resources/application.yml
@@ -1,62 +1,37 @@
+server:
+  port: 9003
 spring:
   config:
     import: "optional:configserver:http://config-service:8088"
-    activate:
-      on-profile: docker
-
-  datasource:
-    url: jdbc:postgresql://postgres-email-service:5433/email_service
-    username: postgres
-    password: admin@123
   jpa:
-    hibernate:
-      ddl-auto: create
+    defer-datasource-initialization: true
+    properties.hibernate.format_sql: true
+    generate-ddl: true
+    hibernate.ddl.auto: update
+    show-sql: true
+    database-platform: org.hibernate.dialect.PostgreSQLDialect # Specify PostgreSQL dialect
+
   properties:
     hibernate:
       jdbc:
         lob:
           non_contextual_creation: true
-
-eureka:
-  client:
-    service-url:
-      defaultZone: http://eureka-server:8761/eureka/
-
----
-spring:
   application:
     name: email-service
-  config:
-    import: "optional:configserver:http://localhost:8088"
-
-  main:
-    web-application-type: reactive
-    allow-bean-definition-overriding: true
   datasource:
-    url: jdbc:postgresql://localhost:5432/email_service
-    username: postgres
-    password: admin@123
-  jpa:
-    hibernate:
-      ddl-auto: create
-  properties:
-    hibernate:
-      jdbc:
-        lob:
-          non_contextual_creation: true
-  jackson:
-    serialization:
-      order-map-entries-by-keys: false
+    username: ${USER_DB:postgres}
+    password: ${PASSWORD_DB:admin@123}
+    url: ${HOST_DB:jdbc:postgresql://localhost:5433/email_service?useSSL=false}
 
-server:
-  port: 9003
-security:
-  basic:
-    enabled: false
 
-security.enable-csrf: false
 
 eureka:
+  instance:
+    non-secure-port: 80
   client:
-    service-url:
-      defaultZone: http://eureka-server:8761/eureka/
+    fetch-registry: true
+    register-with-eureka: true
+    healthcheck:
+      enabled: true
+    serviceUrl:
+      defaultZone: ${EUREKA_URL:http://localhost:8761/eureka}
