--- a/email-service/src/main/resources/application.yml
+++ b/email-service/src/main/resources/application.yml
@@ -21,7 +21,7 @@ spring:
   datasource:
     username: ${USER_DB:postgres}
     password: ${PASSWORD_DB:admin@123}
-    url: ${HOST_DB:jdbc:postgresql://localhost:5433/email_service?useSSL=false}
+    url: jdbc:postgresql://localhost:5433/email_service?useSSL=false
 
 
 
